@@ -6,8 +6,8 @@
     <groupId>com.baeldung.springsecuredsockets</groupId>
     <artifactId>spring-security-web-sockets</artifactId>
     <version>1.0.0</version>
-    <name>spring-security-web-sockets</name>
     <packaging>war</packaging>
+    <name>spring-security-web-sockets</name>
 
     <parent>
         <groupId>com.baeldung</groupId>
@@ -162,12 +162,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <argLine>
-                        --add-opens java.base/java.lang=ALL-UNNAMED
-                        --add-opens java.base/java.lang.invoke=ALL-UNNAMED
-                    </argLine>
-                </configuration>
             </plugin>
         </plugins>
     </build>
